<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="21dp">


        <EditText
            android:id="@+id/txtName"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:hint="@string/addTaskHint"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dateChip"
            android:layout_width="110dp"
            android:layout_height="32dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:text="Add DueDate:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/priority"
            app:layout_constraintBottom_toTopOf="@+id/prioritySpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lblPriority"
            android:layout_width="21dp"
            android:layout_height="16dp"
            android:gravity="center"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="@+id/prioritySpinner"
            app:layout_constraintEnd_toEndOf="@+id/prioritySpinner"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="@+id/prioritySpinner"
            app:layout_constraintTop_toTopOf="@+id/prioritySpinner"
            app:layout_constraintVertical_bias="0.36" />

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="79dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toEndOf="@+id/dateChip"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.828" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Duration:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/durationSpinner"
            android:layout_width="77dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:background="@android:drawable/btn_dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.52" />

        <TextView
            android:id="@+id/lblDuration"
            android:layout_width="44dp"
            android:layout_height="28dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/durationSpinner"
            app:layout_constraintEnd_toEndOf="@+id/durationSpinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/durationSpinner"
            app:layout_constraintTop_toTopOf="@+id/durationSpinner" />

        <com.google.android.material.chip.Chip
            android:id="@+id/timeChip"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:text="Time:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateChip" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lblLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Labels"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/labelRecycler"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <ImageButton
            android:id="@+id/addLabelButton"
            android:layout_width="31dp"
            android:layout_height="35dp"
            android:onClick="onClick"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/labelRecycler"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/labelRecycler"
            android:layout_width="151dp"
            android:layout_height="107dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.739"
            app:layout_constraintStart_toEndOf="@+id/lblInput"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/lblInput"
            android:layout_width="190dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addLabelButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint3"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lblSubtasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/addSubtask"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/inputSubtask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.483" />

        <EditText
            android:id="@+id/inputSubtask"
            android:layout_width="208dp"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addSubtaskButton"
            app:layout_constraintStart_toEndOf="@+id/lblSubtasks"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.458" />

        <ImageButton
            android:id="@+id/addSubtaskButton"
            android:layout_width="34dp"
            android:layout_height="33dp"
            android:layout_marginEnd="16dp"
            android:onClick="onClick"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/inputSubtask"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint4"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subtaskRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint5"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_above="@+id/constraint6"
        android:layout_below="@+id/constraint4"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lblNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/addNote"
            app:layout_constraintBottom_toTopOf="@+id/noteRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noteRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint6"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="17dp">

        <Button
            android:id="@+id/completeAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="addTaskClicked"
            android:text="Done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelAddTask"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancelAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="cancelTaskClicked"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/completeAddTask"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>